--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <header></header>
+    <header>{#include navbar/}</header>
     <main>
         <section class="highlight">
             <div class="container">
@@ -95,7 +95,7 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>{#include footer/}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
