--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -23,6 +23,7 @@
 </head>
 
 <body>
+    <header>{#include navbar/}</header>
     <main>
         <div class="container text-center d-flex align-items-center vh-100" style="max-width: 500px;">
             <div><img class="mb-5" src="/assets/img/404.png?h=1d582e7483a0806cd75b8e30c24e439d" width="50%">
@@ -31,6 +32,7 @@
             </div>
         </div>
     </main>
+    <footer>{#include footer/}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
