--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -9,8 +9,7 @@
                     <figcaption class="blockquote-footer text-white"><small class="text-white-50 d-block">Santiago de
                             los Caballeros</small><small class="text-white-50 d-block">C/ Parada Vieja, Res. María
                             Alejandra I 2do Nivel</small><small class="text-white-50 d-block">Tel: (809)
-                            820-0897</small><small class="text-white-50 d-block">E-Mail:
-                            constructoraromsalsrl@hotmail.com </small>
+                            820-0897</small><small class="text-white-50 d-block">E-Mail: contacto@romsal.com.do</small>
                     </figcaption>
                 </figure>
             </div>
@@ -30,7 +29,7 @@
                 <nav class="navbar navbar-dark text-center h-100">
                     <div class="container-fluid">
                         <ul class="navbar-nav w-100">
-                            <li class="nav-item"><a class="nav-link active" href="/">Inicio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/">Inicio</a></li>
                             <li class="nav-item"><a class="nav-link" href="/property/search">Propiedades</a></li>
                             <li class="nav-item"><a class="nav-link" href="/about">Nosotros</a></li>
                             <li class="nav-item"><a class="nav-link" href="/contact">Contacto</a></li>
