--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <header></header>
+    <header>{#include navbar/}</header>
     <main>
         <div class="container">
             <div class="row">
@@ -222,7 +222,7 @@
             </div>
         </div>
     </main>
-    <footer></footer>
+    <footer>{#include footer/}</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/bs-init.js?h=7265b1488dcf69b8a52816ef73c57595"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
